# SolanaTokenCreator

./: .gitignore  Cargo.toml  LICENSE  README.md
web-app/: index.html  package-lock.json  package.json  test.html  vite.config.js
web-app/src/: main.jsx
web-app/src/components/: App.jsx
web-app/src/pages/: Dashboard.jsx  Deployment.jsx  MetadataEditor.jsx  MetadataGuide.jsx  TokenConfiguration.jsx  Transfer.jsx
web-app/src/styles/: App.css
web-app/src/utils/: cryptoPolyfill.js  solanaUtils.js
