[package]
name = "custom_solana_token"
version = "0.1.0"
edition = "2021"
description = "Custom Solana Token Smart Contract"
resolver = "2" # Add resolver to help with dependency resolution

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.14.17" # Use an older, more compatible version
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
borsh = "0.9.3" # Use an older version that's more compatible
borsh-derive = "0.9.3" # Match borsh version

[dev-dependencies]
solana-sdk = "1.14.17" # Match solana-program version
solana-program-test = "1.14.17" # Match solana-program version

[lib]
crate-type = ["cdylib", "lib"]

# Add this patch section to override the problematic dependency
[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/ahash.git", rev = "a8b5643b" }
